--- a/style.css
+++ b/style.css
@@ -2,59 +2,56 @@
   background-color: gray;
 }
 
-.top-header {
-  display: fixed;
-  top: 0;
-  left: 0;
-  right: 0;
-  z-index: 1000;
-  background: var(--glas);
-  backdrop-filter: blur(20px);
+header {
+ background-color: rgb(5, 12, 40,0.85);
+ padding: 1rem 3rem;
+ display: flex;
+ justify-content: space-between;
+ align-items: center;
+ border-bottom: 1px solid rgb(255, 255, 255, 0.05);
+ position: sticky;
+ top: 0;
+ z-index: 100;
 }
 
-.contenedor {
-  max-width: 1400px;
-  margin: 0 auto;
-  padding: 1rem 2rem;
+.tema_logo{
   display: flex;
-  justify-content: space-between;
   align-items: center;
-  gap: 2rem;
+  gap: 10px;
 }
 
-.tema_logo {
-  height: 70px;
-  border-radius: 10px;
-  -webkit-border-radius: 10px;
-  -moz-border-radius: 10px;
-  -ms-border-radius: 10px;
-  -o-border-radius: 10px;
-  object-fit: cover;
-}
-.icono {
-  font-size: 1.8rem;
+.tema_logo img {
+  width: 35px;
+  filter: drop-shadow(0 0 10px #0ff);
+  -webkit-filter: drop-shadow(0 0 10px #0ff);
 }
 
-.nav-menu ul {
-  display: flex;
-  list-style: none;
-  gap: 2rem;
-  align-items: center;
-  background-color: aqua;
-}
-.nav-menu a {
-  text-decoration: none;
+.tema_logo span{
+  font-size: 1.5rem;
   font-weight: bold;
-  color: rgb(96, 109, 105);
-  font-size: 1rem;
-  transition: color 0.3s ease;
-  -webkit-transition: color 0.3s ease;
-  -moz-transition: color 0.3s ease;
-  -ms-transition: color 0.3s ease;
-  -o-transition: color 0.3s ease;
 }
 
-.nav-menu a:hover {
-  color: blueviolet;
-  text-decoration: underline;
+.nav-menu ul{
+  list-style: none;
+  display: flex;
+  gap: 2rem;
+  align-items: center;
 }
+
+.nav-menu a{
+  text-decoration: none;
+  color: blueviolet;
+  font-size: 1rem;
+  transition: 0.3s;
+  -webkit-transition: 0.3s;
+  -moz-transition: 0.3s;
+  -ms-transition: 0.3s;
+  -o-transition: 0.3s;
+}
+
+.nav-menu a:hover,
+.nav-menu a.active {
+  color: aqua;
+}
+
+
