--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 :root {
-  background-color: gray;
+  background-color: #0ff;
 }
 
 header {
@@ -53,5 +53,75 @@ header {
 .nav-menu a.active {
   color: aqua;
 }
+
+.seccion-pricipal{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 5rem 3rem;
+  gap: 3rem;
+}
+.contenedor_izquierdo{
+  flex: 1;
+}
+.etiqueta{
+  display: inline-block;
+  background-color: blueviolet;
+  padding: 6px 14px;
+  border-radius: 20px;
+  color: aliceblue;
+}
+.estadisticas{
+  margin-top:2rem ;
+  display: flex;
+  gap: 3px;
+}
+
+.estadisticas h3{
+  font-size: 2rem;
+  background-color:linear-gradient(90deg, #3cd5ff,#8da4ff);
+  color: black;
+}
+.contenedor-derecho{
+  flex: 1;
+  display: flex;
+  justify-content: center;
+}
+
+.targeta{
+  background: #0c112e;
+  padding: 3rem;
+  border-radius: 20px;
+  border: 1px solid #153b70;
+  box-shadow: 0 0 30px rgba(50,120,200,0.4);
+}
+
+.targeta img{
+  width: 150px;
+  filter: drop-shadow(0 0 25 #00eaff);
+  -webkit-filter: drop-shadow(0 0 25 #00eaff);
+}
+
+.seccion{
+  text-align: center;
+  padding: 5rem 2rem;
+}
+.targetas{
+  margin-top: 3rem;
+  display: grid;
+  grid-template-columns: repeat(auto-fit,minmax(250px,1fr));
+  gap: 2rem;
+
+}
+
+.target{
+  background-color: #0d1438;
+  padding: 2rem;
+  border-radius: 20px;
+  border: 1px solid #1c3d73;
+  transition: 0.3s;
+}
+
+
 
 
