--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 :root {
-  background-color:#0d1438;
+  background-color:#8da4ff;
 }
 
 header {
@@ -61,6 +61,17 @@ header {
   padding: 5rem 3rem;
   gap: 3rem;
 }
+
+.consejos {
+   background-color: #1c3d73;
+   padding: 0.9rem 2rem;
+   border-radius: 12px;
+   color: aliceblue;
+   text-decoration: none;
+   transition: 0.3s ;
+   display: inline-block;
+}
+
 .contenedor_izquierdo{
   flex: 1;
 }
@@ -127,10 +138,26 @@ header {
   box-shadow: 0 0 20 px #3cd5ff;
 }
 
-.lista{
-
-
-
+form {
+  max-width: 450px;
+  margin: auto;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
 }
 
+form input,
+form textarea {
+  background: #0c112e;
+  border: 1px solid #153b70;
+  padding: 1rem;
+  border-radius: 12px;
+  color: antiquewhite;
+}
+
+footer {
+  text-align: center;
+  padding: 2rem;
+  opacity: 0.5;
+}
 
