fix: correccion de errores en html y css

--- a/style.css
+++ b/style.css
@@ -100,7 +100,7 @@ header {
 }
 
 .targeta{
-  background: #0c112e;
+  background-color: #00eaff;
   padding: 3rem;
   border-radius: 20px;
   border: 1px solid #153b70;
