--- a/style.css
+++ b/style.css
@@ -148,18 +148,22 @@ header {
   border-color: #3cd5ff;
   box-shadow: 0 0 90px #3cd5ff;
 }
+.lista{
+ padding: 1rem 1.5rem;
+ margin: 0.7rem 0;
+ border: 1px solid #1c3d73;
+ border-radius: 12px;
+ background-color: #8da4ff;
+ color: black;
+ font-size: 1rem;
+ list-style: none;
+ box-shadow: 0 0 10px;
+ transition: 0.3s;;
 
-.lista {
-  background-color: #8da4ff;
-  border-radius: 1px solid #1c3d73;
-  padding: 1rem 1.5rem;
-  margin: 0.7rem 0;
-  border-radius: 12px;
-  color: black;
-  font-size: 1rem;
-  list-style: none;
-  transition: 0.3s;
-  box-shadow: 0 0 10px;
+ display: flex;
+ flex-direction: column;
+ align-items: center;
+ text-align: center;
 }
 .lista:hover {
   border-color: #cf8bf7;
@@ -167,6 +171,8 @@ header {
   transform: translateX(5px);
   
 }
+
+
 
 form {
   max-width: 450px;
